<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MovieDetails">

    <ImageView
        android:id="@+id/movieBackdrop"
        android:layout_width="0dp"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/backdropDescription"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/moviePoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/overviewLabel"
        app:layout_constraintEnd_toStartOf="@+id/movieTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieBackdrop"
        android:contentDescription="@string/moviePoster" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textview"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieBackdrop" />

    <TextView
        android:id="@+id/overviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/overviewLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieBackdrop" />

    <TextView
        android:id="@+id/overviewValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        android:text="@string/overviewLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overviewLabel" />

    <TextView
        android:id="@+id/releaseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="8dp"
        android:text="@string/releaseDateValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <ImageView
        android:id="@+id/scoreImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="187dp"
        android:src="@android:drawable/star_big_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseValue"
        android:contentDescription="@string/star_image" />

    <TextView
        android:id="@+id/ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/scoreImage"
        app:layout_constraintTop_toBottomOf="@+id/releaseValue" />

</android.support.constraint.ConstraintLayout>